<resources>
    <string name="app_name">LoggingApp</string>
    <string name="buttons_welcome">Please interact with the buttons, we\'ll track your clicks!</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="see_all_logs">SEE ALL LOGS</string>
    <string name="delete_logs">Delete Logs</string>
</resources>
